# llm-gateway

./: .env.example  .gitignore  README.md  pyproject.toml
infrastructure/: .gitignore  app.py  cdk.json
infrastructure/lambda/: .dockerignore  Dockerfile  handler.py
infrastructure/stacks/: lambda_stack.py  llm_wrapper_stack.py
sql/: init.sql
src/costs/: __init__.py  bootstrap.py  handlers.py  repository.py  schema.py
src/costs/pricing/: calculator.py  repository.py
src/providers/: __init__.py  exceptions.py  models.py
src/providers/credentials/: repository.py  schema.py
src/providers/llm/: base.py  factory.py  service.py
src/providers/llm/backends/: __init__.py  gemini.py
src/providers/llm/backends/azure_openai/: __init__.py  base.py  batch.py  models.py  utils.py
src/providers/ocr/: base.py  factory.py  service.py
src/providers/ocr/backends/: di.py
src/shared/: config.py
src/shared/db/: base.py  session.py
src/shared/events/: bus.py  events.py
